--- a/test.html
+++ b/test.html
@@ -1,81 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  </head>
-  <style type="text/css">
-    .show{
-      color: green;
-    }
-  </style>
-  <body>
-    <div id="app">
-      <div>hello {{msg}}</div>
-      <div v-once>hello {{msg}} 123</div>
-      <div>{{reverseMessage}}</div>
-      <div>{{now}}</div>
-      <div>{{fullName}}</div>
-      <div v-bind:class="title">{{msg}}==={{message?msg:'message是false'}}</div>
-      <ol>
-        <li v-for="item in list">{{item.name}}</li>
-      </ol>
-      <div>
-        <p>{{msg}}</p>
-        <input style="" type="text" v-model="msg">
-        <button v-if="message" @click="reverseMsg">点击反转</button>
-      </div>
-      <ol>
-        <todo-item :todo="list"></todo-item>
-      </ol>
-    </div>
-    <script type="text/ecmascript">
-      Vue.component('todo-item', {
-        props: ['todo'],
-        template: '<ol><li v-for="item in todo">{{item.name}}</li></ol>'
-      })
-      var app = new Vue({
-        el: '#app',
-        data: {
-          msg: 'world',
-          message: true,
-          title: 'show',
-          list: [
-            {name: 'Tom'},
-            {name: 'Jim'},
-            {name: 'Bob'}
-          ],
-          // fullName: 'hello world',
-          lastName: 'world',
-          firstName: 'hello'
-        },
-        methods: {
-          reverseMsg() {
-            this.msg = this.msg.split('').reverse().join('')
-          }
-        },
-        computed: {
-          reverseMessage() {
-            return '我是反转过了来的msg=====>' + this.msg.split('').reverse().join('')
-          },
-          now() {
-            return Date.now()
-          },
-          fullName: {
-            get: function () {
-              return this.firstName + ' ' + this.lastName
-            },
-            set: function (newValue) {
-              var names = newValue.split('')
-              this.firstName = names[0]
-              this.lastName = names[names.length - 1]
-            }
-          }
+<!DOCTYPE=html>
+<html>
+<head>
+  <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js" type="text/javascript"></script>
+
+  <script type="text/javascript">
+    $(document).ready(function () {
+      var range = 50;             //距下边界长度/单位px
+      var elemt = 20;           //插入元素高度/单位px
+      var maxnum = 20;            //设置加载最多次数
+      var num = 1;
+      var totalheight = 0;
+      var main = $("#content");                     //主体元素
+      $(window).scroll(function () {
+        var srollPos = $(window).scrollTop();    //滚动条距顶部距离(页面超出窗口的高度)
+
+        //console.log("滚动条到顶部的垂直高度: "+$(document).scrollTop());
+        //console.log("页面的文档高度 ："+$(document).height());
+        //console.log('浏览器的高度：'+$(window).height());
+
+        totalheight = parseFloat($(window).height()) + parseFloat(srollPos);
+        if (($(document).height() - range) <= totalheight && num != maxnum) {
+          main.append("<div style='border:1px solid tomato;margin-top:20px;color:#ac" + (num % 20) + (num % 20) + ";height:" + elemt + "' >hello world" + srollPos + "---" + num + "</div>");
+          num++;
         }
-      })
-      app.lastName = 'Tom'
-      console.log(app.lastName)
-    </script>
-  </body>
+      });
+    });
+  </script>
+</head>
+<body>
+<div id="content" style="height:960px">
+  <div id="follow">this is a scroll test;<br/> 页面下拉自动加载内容</div>
+  <div style='border:1px solid tomato;margin-top:20px;color:#ac1;height:800'>hello world test DIV</div>
+
+</div>
+</body>
 </html>
