--- a/test.html
+++ b/test.html
@@ -30,7 +30,7 @@
 <body>
 <div id="content" style="height:960px">
   <div id="follow">this is a scroll test;<br/> 页面下拉自动加载内容</div>
-  <div style='border:1px solid tomato;margin-top:20px;color:#ac1;height:800'>hello world test DIV</div>
+  <div style='border:1px solid tomato;margin-top:20px;color:#ac1;height:800px'>hello world test DIV</div>
 
 </div>
 </body>
