--- a/test.html
+++ b/test.html
@@ -2,9 +2,38 @@
 <html>
 <head>
   <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js" type="text/javascript"></script>
-
+  <style type="text/css">
+    *{margin:0;padding:0;font-size:12px;font-family:'Microsoft YaHei'}
+    #nav{
+      width:300px;
+      height:100px;
+      -webkit-box-orient:horizontal;
+      -moz-box-orient:horizontal;
+      box-orient:horizontal;
+    }
+    #nav{
+      display:-webkit-box;
+      display:-moz-box;
+      display:box;
+      margin:auto;
+      margin-top:30px;
+      border:10px solid #7f8c8d
+    }
+    #nav div{
+      -webkit-box-flex:1;
+      -moz-box-flex:1;
+      box-flex:1;
+      text-align:center;
+      line-height:100px;
+      font-size:36px;
+      color:#fff
+    }
+    #box1{background:#1abc9c}
+    #box2{background:#3498db}
+    #box3{background:#9b59b6}
+  </style>
   <script type="text/javascript">
-    $(document).ready(function () {
+    /*$(document).ready(function () {
       var range = 50;             //距下边界长度/单位px
       var elemt = 20;           //插入元素高度/单位px
       var maxnum = 20;            //设置加载最多次数
@@ -24,14 +53,24 @@
           num++;
         }
       });
-    });
+    });*/
   </script>
 </head>
 <body>
-<div id="content" style="height:960px">
+<!--<div id="content" style="height:960px">
   <div id="follow">this is a scroll test;<br/> 页面下拉自动加载内容</div>
   <div style='border:1px solid tomato;margin-top:20px;color:#ac1;height:800px'>hello world test DIV</div>
 
+</div>-->
+<div style="width: 100%;background: #bfa;height: 200px;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;display:box;box-orient:horizontal">
+  <div style="background-color: red;box-flex:1;height: 66px">a</div>
+  <div style="background-color: orange;box-flex:1;height: 66px">b</div>
+  <div style="background-color: blue;box-flex:1;height: 66px">c</div>
+</div>
+<div id="nav">
+  <div id="box1">1</div>
+  <div id="box2">2</div>
+  <div id="box3">3</div>
 </div>
 </body>
 </html>
